@@ -1,3 +1,11 @@
+2013-10-11  Yao Qi  <yao@codesourcery.com>
+
+	* gdb.mi/mi-catch-load.c: Remove the include of "dlfcn.h".
+	 [__WIN32__]: Include "windows.h" and define macro 'dlopen'
+	 and 'dlclose'.
+	[!__WIN32__]: Include "dlfcn.h".
+	* gdb.mi/mi-catch-load.exp: Set up kfail.
+
 2013-10-10  Andreas Arnez  <arnez@linux.vnet.ibm.com>
 
 	* lib/gdb.exp (gdb_core_cmd): Replace fixed string "re-load
